# SayRight

./: .gitignore  DEPLOYMENT.md  PLAN.md  QUICK_DEPLOY.md  README.md  SETUP.md
backend/: .env.example  README.md  main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
